# fprime-amsat-reference

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  project-pi-zero.cmake  project-test.cmake  project.cmake  project.cmake.backup  seed-history  settings.ini
CDHDeployment/: README.md
CDHDeployment/Top/: CDHDeploymentPackets.fppi  CDHDeploymentTopology.cpp  CDHDeploymentTopology.hpp  CDHDeploymentTopologyDefs.hpp  instances.fpp  topology.fpp
CHDDeployment/: CMakeLists.txt  Main.cpp  README.md
CHDDeployment/Top/: CHDDeploymentPackets.xml  CHDDeploymentTopology.cpp  CHDDeploymentTopology.hpp  CHDDeploymentTopologyDefs.hpp  CMakeLists.txt  instances.fpp  topology.fpp
Components/: CMakeLists.txt
Components/USBSoundCard/: CMakeLists.txt  README.md  USBSoundCard.cpp  USBSoundCard.fpp  USBSoundCard.hpp
Components/USBSoundCard/docs/: sdd.md
Components/USBSoundCard/test/: README_TESTING.md  run_complete_test_suite.sh  run_full_tests.sh  run_integration_test.sh  run_simple_integration_test.sh  run_simple_test.sh  run_tests.sh  simple_test  simple_test.cpp
Components/USBSoundCard/test/ut/: PacketReceiver.hpp  USBSoundCardTester.hpp
Components/USBSoundCard/test/ut/integration/: IntegrationTest.cpp  PacketReceiver.cpp
Components/USBSoundCard/test/ut/unit/: PacketReceiver.cpp  USBSoundCardTestMain.cpp  USBSoundCardTester.cpp  USBSoundCardTester.hpp
MainDeployment/: CMakeLists.txt  Main.cpp
MainDeployment/Top/: CMakeLists.txt  MainDeploymentPackets.fppi  MainDeploymentPackets.xml  MainDeploymentTopology.cpp  MainDeploymentTopology.hpp  MainDeploymentTopologyDefs.hpp  instances.fpp  topology.fpp
build-artifacts/Linux/CHDDeployment/dict/: CHDDeploymentTopologyAppDictionary.xml  CHDDeploymentTopologyDictionary.json
build-artifacts/Linux/MainDeployment/dict/: MainDeploymentTopologyAppDictionary.xml  MainDeploymentTopologyDictionary.json
fprime-venv/: pyvenv.cfg
